Name: gf-embed
Version: 2.7
License: GPL
License-file: ../GPL
Build-depends: base, mtl, haskell98
Synopsis: Grammatical Framework embedded API.
Ghc-options: -O0
Extensions: 
Exposed-Modules: 
  GF.Embed.EmbedAPI
Other-modules:
  GF.Canon.AbsGFC
  GF.Canon.CanonToGrammar
  GF.Canon.CMacros
  GF.Canon.GetGFC
  GF.Canon.GFC
  GF.Canon.LexGFC
  GF.Canon.Look
  GF.Canon.MkGFC
  GF.Canon.ParGFC
  GF.Canon.PrintGFC
  GF.Canon.Subexpressions
  GF.CF.CanonToCF
  GF.CF.CF
  GF.CF.CFIdent
  GF.CF.CFtoGrammar
  GF.CF.EBNF
  GF.CF.PPrCF
  GF.CF.Profile
  GF.Compile.Evaluate
  GF.Compile.Extend
  GF.Compile.GetGrammar
  GF.Compile.ModDeps
  GF.Compile.NoParse
  GF.Compile.PGrammar
  GF.Compile.RemoveLiT
  GF.Compile.Rename
  GF.Compile.ShellState
  GF.Compile.Update
  GF.Conversion.GFC
  GF.Conversion.GFCtoSimple
  GF.Conversion.MCFGtoCFG
  GF.Conversion.RemoveEpsilon
  GF.Conversion.RemoveErasing
  GF.Conversion.RemoveSingletons
  GF.Conversion.SimpleToFCFG
  GF.Conversion.SimpleToFinite
  GF.Conversion.SimpleToMCFG
  GF.Conversion.SimpleToMCFG.Coercions
  GF.Conversion.SimpleToMCFG.Nondet
  GF.Conversion.SimpleToMCFG.Strict
  GF.Conversion.Types
  GF.Data.Assoc
  GF.Data.BacktrackM
  GF.Data.ErrM
  GF.Data.GeneralDeduction
  GF.Data.Glue
  GF.Data.IncrementalDeduction
  GF.Data.Map
  GF.Data.Operations
  GF.Data.Parsers
  GF.Data.RedBlack
  GF.Data.RedBlackSet
  GF.Data.SharedString
  GF.Data.SortedList
  GF.Data.Str
  GF.Data.Trie2
  GF.Data.Utilities
  GF.Data.Zipper
  GF.Embed.EmbedCustom
  GF.Embed.EmbedParsing
  GF.Formalism.CFG
  GF.Formalism.FCFG
  GF.Formalism.GCFG
  GF.Formalism.MCFG
  GF.Formalism.SimpleGFC
  GF.Formalism.Utilities
  GF.Grammar.AbsCompute
  GF.Grammar.Abstract
  GF.Grammar.AppPredefined
  GF.Grammar.Compute
  GF.Grammar.Grammar
  GF.Grammar.Lockfield
  GF.Grammar.LookAbs
  GF.Grammar.Lookup
  GF.Grammar.Macros
  GF.Grammar.MMacros
  GF.Grammar.PatternMatch
  GF.Grammar.PrGrammar
  GF.Grammar.Refresh
  GF.Grammar.SGrammar
  GF.Grammar.TC
  GF.Grammar.TypeCheck
  GF.Grammar.Unify
  GF.Grammar.Values
  GF.Infra.CheckM
  GF.Infra.Comments
  GF.Infra.Ident
  GF.Infra.Modules
  GF.Infra.Option
  GF.Infra.Print
  GF.Infra.ReadFiles
  GF.Infra.UseIO
  GF.OldParsing.CFGrammar
  GF.OldParsing.ConvertGFCtoMCFG
  GF.OldParsing.ConvertGFCtoMCFG.Coercions
  GF.OldParsing.ConvertGFCtoMCFG.Nondet
  GF.OldParsing.ConvertGFCtoMCFG.Old
  GF.OldParsing.ConvertGFCtoMCFG.Strict
  GF.OldParsing.ConvertGFCtoSimple
  GF.OldParsing.ConvertGrammar
  GF.OldParsing.ConvertMCFGtoCFG
  GF.OldParsing.GeneralChart
  GF.OldParsing.GrammarTypes
  GF.OldParsing.IncrementalChart
  GF.OldParsing.MCFGrammar
  GF.OldParsing.ParseCF
  GF.OldParsing.ParseCFG
  GF.OldParsing.ParseCFG.General
  GF.OldParsing.ParseCFG.Incremental
  GF.OldParsing.SimpleGFC
  GF.OldParsing.Utilities
  GF.Parsing.CFG
  GF.Parsing.CFG.General
  GF.Parsing.CFG.Incremental
  GF.Parsing.CFG.PInfo
  GF.Parsing.FCFG
  GF.Parsing.FCFG.Active
  GF.Parsing.FCFG.PInfo
  GF.Parsing.FCFG.Range
  GF.Parsing.GFC
  GF.Parsing.MCFG
  GF.Parsing.MCFG.Active
  GF.Parsing.MCFG.FastActive
  GF.Parsing.MCFG.Incremental
  GF.Parsing.MCFG.Naive
  GF.Parsing.MCFG.PInfo
  GF.Parsing.MCFG.Range
  GF.Printing.PrintParser
  GF.Printing.PrintSimplifiedTerm
  GF.Probabilistic.Probabilistic
  GF.Source.AbsGF
  GF.Source.GrammarToSource
  GF.Source.LexGF
  GF.Source.ParGF
  GF.Source.PrintGF
  GF.Source.SourceToGrammar
  GF.System.Arch
  GF.System.NoReadline
  GF.System.Readline
  GF.System.Tracing
  GF.Text.Text
  GF.UseGrammar.GetTree
  GF.UseGrammar.Linear
  GF.UseGrammar.Morphology
  GF.UseGrammar.Tokenize
  Transfer.Core.Abs
  Transfer.Core.Lex
  Transfer.Core.Par
  Transfer.Core.Print
  Transfer.ErrM
  Transfer.Interpreter
  Transfer.InterpreterAPI
