name: gf-morpho-server
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: GPL
license-file: LICENSE
synopsis: FastCGI Morphology Server for Grammatical Framework

executable gf-morpho.fcgi
  build-depends: base,
                 old-time,
                 unix,
                 directory,
                 containers,
                 gf,
                 cgi,
                 fastcgi,
                 json,
                 utf8-string
  main-is: MorphoServer.hs
  other-modules:
    FastCGIUtils
