name: gf-server
version: 1.0
cabal-version: >= 1.8
build-type: Custom
license: GPL
license-file: ../../LICENSE
synopsis: FastCGI Server for Grammatical Framework

flag content
  Description:
      Build content service (requires fastcgi and hsql-mysql packages)
      (In Ubuntu: apt-get install libghc-fastcgi-dev libghc-hsql-mysql-dev)
  Default:     False

flag http
  Description: Build pgf-http (deprecated, replaced by gf -server)
  Default: False

flag c-runtime
  Description: Include functionality from the C run-time library (which must be installed already)
  Default:     False

Library
  exposed-modules: PGFService FastCGIUtils CGIUtils ServeStaticFile RunHTTP Cache
  other-modules: URLEncoding CGI Fold
  hs-source-dirs: . transfer

  build-depends: fastcgi >= 3001.0.2.2
       -- Install it in Ubuntu with: apt-get install libghc-fastcgi-dev

  build-depends:   base >=4.2 && <5,
                   time, time-compat, old-locale,
                   directory,
                   filepath,
                   containers,
                   process,
                   gf >= 3.6,
                   cgi >= 3001.1.7.3,
                   httpd-shed>=0.4.0.2,
                   mtl,
                   exceptions,
                   network>=2.3 && <2.6,
                   json >= 0.3.3,
                   utf8-string >= 0.3.1.1,
                   bytestring,
                   pretty,
                   random

  ghc-options: -fwarn-unused-imports
  if os(windows)
    ghc-options: -optl-mwindows
  else
    build-depends: unix

  if flag(c-runtime)
    cpp-options: -DC_RUNTIME

executable pgf-http
  main-is: pgf-http.hs
  Hs-source-dirs: exec
  ghc-options: -threaded
  if impl(ghc>=7.0)
    ghc-options: -rtsopts

  if flag(http)
    buildable: True
    build-depends: base >=4.2 && <5, gf-server, filepath, directory, cgi
  else
    buildable: False

executable pgf-service
  main-is: pgf-fcgi.hs
  Hs-source-dirs: exec
  ghc-options: -threaded -fwarn-unused-imports
  if impl(ghc>=7.0)
    ghc-options: -rtsopts

  build-depends: fastcgi >= 3001.0.2.2
       -- Install it in Ubuntu with: apt-get install libghc-fastcgi-dev

  build-depends: base >=4.2 && <5, gf-server

  if os(windows)
    ghc-options: -optl-mwindows
  else
    build-depends: unix

executable content-service
  if flag(content)
    build-depends: base >=4.2 && <5, old-locale,
                   fastcgi >= 3001.0.2.2,
                       -- In Ubuntu: apt-get install libghc-fastcgi-dev
                   hsql-mysql, hsql
                       -- In Ubuntu: apt-get install libghc-hsql-mysql-dev
    buildable: True
  else
    buildable: False

  main-is: ContentService.hs
  Hs-source-dirs: exec
