name: pgf-server
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: GPL
license-file: LICENSE
synopsis: FastCGI Server for Grammatical Framework

executable pgf.fcgi
  build-depends: base,
                 old-time,
                 unix,
                 directory,
                 filepath,
                 containers,
                 gf >= 3.0,
                 cgi >= 3001.1.7.0,
                 fastcgi >= 3001.0.2.1,
                 json >= 0.3.3,
                 utf8-string >= 0.3.1.1
  main-is: PGFService.hs
  other-modules:
    FastCGIUtils
    Cache
    URLEncoding
  ghc-options: -threaded
