name: gf-tools
version: 0.1
build-type: Simple
cabal-version: >= 1.8

Executable gfdoc
  main-is: GFDoc.hs
  build-depends: base, directory>=1.2, time>=1.5, process

Executable htmls
  main-is: Htmls.hs
  build-depends: base


library
  hs-source-dirs:      gftest
  exposed-modules:     Grammar
  other-modules:       Mu, Graph, FMap, EqRel
  build-depends:       base
                     , containers
                     , pgf2

executable gftest
  hs-source-dirs:      gftest
  main-is:             Main.hs
  build-depends:       base
                     , pgf2
                     , cmdargs
                     , containers
                     , filepath
                     , gf-tools